Fix overflow on titles

--- a/source/stylesheets/_docs.sass
+++ b/source/stylesheets/_docs.sass
@@ -155,3 +155,6 @@
               font-weight: bold
               text-decoration: none
               margin: 0 auto
+              text-overflow: ellipsis
+              overflow: hidden
+              height: 30px
